--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Burgers Food Truck</title>
+<link rel="stylesheet" href="img/burger-icon.png">
 </head>
 
 <body>
-    <header>
-        <h1>Hello World from Illia</h1>
-        <img src="img/grapefruit-slice-332-332.jpg" alt="grapefruit">
+    <header class="">
+        <div>
+
+        </div>
+        <nav>
+
+        </nav>
+        <div>
+
+        </div>
     </header>
     <main>
 
